deployments/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: inference
  labels:
    name: inference
